<resources>
    <string name="app_name">bizdirect1-1</string>
    <string name="logotipo">bizdirect</string>
    <string name="ou_txt">OU </string>
    <string name="tv_username">Nome Completo</string>
    <string name="tv_password">***********</string>
    <string name="bt_login">Login</string>
    <string name="fb_login">facebook login</string>
    <string name="google_login">google login</string>
    <string name="tv_registar_txt">Criar Conta?</string>
    <string name="tv_regi_link">REGISTAR</string>
    <string name="tv_split">__________________________</string>
    <string name="tv_rpass">Esqueceu a senha ?</string>
    <string name="tv_rpass2">Recuperaçao de senha</string>
    <string name="tb_morada">Morada</string>
    <string name="tb_tel">Telefone</string>
    <string name="tb_email">Email </string>
    <string name="tv_nif">NIF</string>
    <string name="dt_nasci">Data de Nascimento</string>
    <string name="bt_reg">Registar</string>
    <string name="tv_loginf">Já tem uma conta ?</string>
    <string name="tv_login">Entrar</string>
    <string name="tb_password">Palavra Passe</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_1">2</string>
    <string name="title_activity_inserirpt">inserirpt</string>
    <string name="title_activity_lojas">lojas</string>
    <string name="tab_text_1">Carros</string>
    <string name="tab_text_2">Roupa</string>
    <string name="tab_text_3">Shop</string>
    <string name="tab_text_4" />
    <string name="title_activity_wallet">wallet</string>
    <string name="title_activity_maps">Map</string>
    <string name="Perfil">Perfil</string>
    <string name="title_activity_config">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">Difinições de Conta</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Sincronizar dados</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificações</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
