<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="glody.com.bizdirect.settings$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general">
        <extra android:name="settings" android:value="prefs_general" ></extra>
    </header>

    <header
        android:fragment="glody.com.bizdirect.settings$GeneralPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" >
        <extra android:name="settings" android:value="prefs_notification" ></extra>
    </header>

    <header
        android:fragment="glody.com.bizdirect.settings$GeneralPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" >
        <extra android:name="settings" android:value="prefs_sync" ></extra>
    </header>
    <header
        android:fragment="glody.com.bizdirect.settings$GeneralPreferenceFragment"
        android:icon="@drawable/ic_back_black_24dp"
        android:title="Sair" >
        <extra android:name="settings" android:value="sair" ></extra>
    </header>

</preference-headers>